--- a/weather-page3.html
+++ b/weather-page3.html
@@ -2,20 +2,22 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Todays Weather</title>
         <link rel="icon" href="img/favicon-16x16.png">
         <link rel="stylesheet" href="style3.css">
     </head>
     <body>
-        <h1>Weather State</h1>
+      
         <nav class="navbar">
-            <li>
-                <a href="main-page2.html">Page1</a>
-            </li>
-            <li>
-                <a href="weather-page3.html">Page2</a>
-            </li>
+                    <h1 class="tb1">Weather State</h1>
+       <div class="links">
+                 <a href="index.html">Home</a>
+               
+       </div>
+
         </nav>
+          <h1 class="textalign   tb1">Get Weather</h1>
         <div class="card">
             <div class="search">
                 <input type="text" class="cityInput" placeholder="Enter City Name" spellcheck="false">
