--- a/weather-page3.html
+++ b/weather-page3.html
@@ -12,7 +12,7 @@
         <nav class="navbar">
                     <h1 class="tb1">Weather State</h1>
        <div class="links">
-                 <a href="index.html">Home</a>
+                 <a href="main-page2.html">Home</a>
                
        </div>
 
